# sigma-rust

bindings/ergo-lib-wasm/: Cargo.toml
bindings/ergo-lib-wasm/src/: ergo_box.rs  token.rs  transaction.rs
bindings/ergo-lib-wasm/tests/: test_transaction.js
ergo-lib/: CHANGELOG.md  Cargo.toml
ergo-lib/src/: chain.rs
ergo-lib/src/chain/: base16_bytes.rs  digest32.rs  ergo_box.rs  json.rs  token.rs  transaction.rs
ergo-lib/src/chain/ergo_box/: box_value.rs  register.rs
ergo-lib/src/chain/json/: ergo_box.rs  ergo_tree.rs
ergo-lib/src/wallet/: signing.rs  tx_builder.rs
ergotree-interpreter/: Cargo.toml
ergotree-interpreter/src/: eval.rs
ergotree-interpreter/src/eval/: context.rs  expr.rs
ergotree-interpreter/src/eval/context/: ir_ergo_box_dummy.rs
ergotree-ir/: Cargo.toml
ergotree-ir/src/: ir_ergo_box.rs  lib.rs
ergotree-ir/src/mir/: constant.rs  expr.rs  value.rs
ergotree-ir/src/serialization/: data.rs  serializable.rs
ergotree-ir/src/sigma_protocol/: dlog_group.rs
