[package]
name = "ergotree-ir"
version = "0.13.3"
license = "CC0-1.0"
authors = ["Denys Zadorozhnyi <denys@zadorozhnyi.com>"]
edition = "2018"
description = "ErgoTree IR, serialization"
repository = "https://github.com/ergoplatform/sigma-rust"
exclude = [
    "proptest-regressions/*"
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sigma-ser = { version = "^0.2.0", path = "../sigma-ser" }
sigma-util = { version = "^0.2.0", path = "../sigma-util" }
k256 = { version = "0.9.5", features = ["zeroize", "arithmetic", "ecdsa"] }
elliptic-curve = {version = "0.10.5", features = ["zeroize"]}
thiserror = "1"
# used in elliptic-curve(in ergo-lib), compiled here with WASM support
getrandom = {version = "0.2.3", features = ["js"]}
lazy_static = "1.4"
derive_more = "0.99"
impl-trait-for-tuples = "0.2.0"
proptest-derive = {version = "0.3.0", optional = true }
bs58 = "0.4.0"
base16 = "0.2.1"
num-bigint = "0.4.0"
#bounded-vec = { git = "https://github.com/ergoplatform/bounded-vec", rev="f684d78" }
bounded-vec = { version = "^0.4.0" } 
num256 = "0.3.1"
num-traits = "0.2.14"
num-derive = "0.3.3"

[dependencies.proptest]
# wasm support, via https://altsysrq.github.io/proptest-book/proptest/wasm.html
version = "1.0.0"
# The default feature set includes things like process forking which are not
# supported in Web Assembly.
default-features = false
# Enable using the `std` crate.
features = ["std"]
optional = true

[features]
default = []
arbitrary = ["proptest", "proptest-derive"]

[dev-dependencies]
sigma-test-util = { version = "0.2.0", path = "../sigma-test-util" }
